# slides-translator-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  slides-translator-agent.code-workspace
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
architecture/: components.mermaid
slides_translator_agent/: .agent_engine_config.json  __init__.py  agent.py  agent_engine_app.py  auths.py  configs.py  deploy.py  requirements.txt  tools.py
tasks/: agent.just  check.just  clean.just  cloud.just  format.just  install.just
